exercice3/kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: exercice3
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui-ing
  namespace: exercice3
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /prometheus-exercice3
        backend:
          serviceName: prometheus-operated
          servicePort: 9090
